Refactor database migration scripts, add keystore, and enhance consent/login templates
- Removed the custom SQL migration file for mall_user, login_otp, auth_audit, auth_outbox, and auth_consent_history tables.
- Added a new keystore file for authentication.
- Updated consent.html to improve styling and added hidden fields for scope compatibility.
- Enhanced login.html with better styling and improved user experience for OTP login.
- Marked PostgreSQL dependency as optional in pom.xml.
- Refactored RedisOperator class for better code organization and clarity.